--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f64cc3c7f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb2eef631d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64cc097790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64cc0872d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2eec530d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2eec532d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64cc6a30d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64cc635bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2ef201a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2ef201c10&gt;]</pre>
 </div>
 
 </div>
