--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f8da16990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0eb1908d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f8d6fa050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f8d42c5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0eb15c6e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0eb15c6fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f8dca4990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f8dcfb210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0eb1b89790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0eb1b89990&gt;]</pre>
 </div>
 
 </div>
