--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7ef908490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f997eccb250&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7ef5b6ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7ef5d3110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f997e9bb090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f997e9bb290&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7efb808d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7efb80ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f997ef688d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f997ef68ad0&gt;]</pre>
 </div>
 
 </div>
