--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5c67d09810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe564bd7d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c679f5110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c679f5310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5648d4050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe5648d4250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5c67fa4a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5c67fa4c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe564e80990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe564e80b90&gt;]</pre>
 </div>
 
 </div>
