--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5048cff0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f04f0386350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f50486d55d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f50486a44d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f04f0069590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f04f00697d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5048994210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5048c32690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f04f0611710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f04f0611910&gt;]</pre>
 </div>
 
 </div>
