--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe92ae96690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4c9df29750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe92ab5cfd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe92ab77210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c9dbf5fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4c9dbf8250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe92b126850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe92b126a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4c9e1a9910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4c9e1a9b50&gt;]</pre>
 </div>
 
 </div>
