--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25432fbe10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe9ec855650&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2542fdaed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2542fe8110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9ec55ff90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9ec53e1d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f254357f890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f254357fa90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9ecaf3910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe9ecaf3b10&gt;]</pre>
 </div>
 
 </div>
