--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ff3c6a450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffbc41fcf50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ff3929fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ff3928090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbc3eeb050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffbc3eeb250&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ff3f32e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ff3edb950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffbc4499910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffbc4499b10&gt;]</pre>
 </div>
 
 </div>
