--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1cebdbe110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb329810fd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1ceba4bcd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1ceba4bed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3294cae90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3294cd110&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1cec017650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1cec017850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb329a80750&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb329a80990&gt;]</pre>
 </div>
 
 </div>
