--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36d113fe10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f751692edd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36d0dcee50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36d0de7090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f75165e7fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f75165f8210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36d1399810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36d1399a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7516ba7990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7516ba7b90&gt;]</pre>
 </div>
 
 </div>
