--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f83247518d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89bb7b1c90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8324791ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f83247ab110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89bb476fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89bb47a210&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8324d5d810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8324d5da10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89bba2a910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89bba2ab10&gt;]</pre>
 </div>
 
 </div>
