--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1c803e4710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f229a74d2d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c800cae10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c800cafd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f229a411dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f229a411fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1c8067f750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1c8067f950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f229a9dd710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f229a9dd910&gt;]</pre>
 </div>
 
 </div>
