--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f367069a9d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb8c4af8910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3670343f10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f367035c150&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb8c47f0710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb8c47f0b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f367090d8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f367090dad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb8c4d97790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb8c4d97990&gt;]</pre>
 </div>
 
 </div>
