--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f696ab67890&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf7ed44510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f696a821f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f696a825190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf7ea18f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbf7ea41190&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f696add6850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f696add6a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf7efe4810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbf7efe4a10&gt;]</pre>
 </div>
 
 </div>
