--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf7ed44510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4e69727f90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf7ea18f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf7ea41190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e693e1e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4e693e1fd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf7efe4810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf7efe4a10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4e699ac810&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4e699aca10&gt;]</pre>
 </div>
 
 </div>
